--- a/src/RacerInfo.html
+++ b/src/RacerInfo.html
@@ -5,7 +5,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SISLRA/RacerInfo</title>
-    <link rel="icon" href="/SISLRA/Favicon/16ChristmasTree.ico">
+    <link rel="icon" href="/SISLRA/ChristmasTree.ico">
 
     <!-- CSS -->
     <link rel="stylesheet" href="/Bootstrap/css/bootstrap.css">
@@ -48,21 +48,24 @@
     <div class="header shade">
       <!-- Slide show from here https://css-tricks.com/snippets/jquery/simple-auto-playing-slideshow/ -->
       <div class="slideshow">
-        <img src="/SISLRA/Slides/Untitled-2.jpg" alt="Slide2"/>
+        <img src="/SISLRA/Slides/Untitled-19.jpg" alt="Slide19"/>
         <img src="/SISLRA/Slides/Untitled-3.jpg" alt="Slide3"/>
+        <img src="/SISLRA/Slides/Untitled-7.jpg" alt="Slide7"/>
+        <img src="/SISLRA/Slides/Untitled-1.jpg" alt="Slide1"/>
         <img src="/SISLRA/Slides/Untitled-4.jpg" alt="Slide4"/>
+        <img src="/SISLRA/Slides/Untitled-15.jpg" alt="Slide15"/>
+        <img src="/SISLRA/Slides/Untitled-16.jpg" alt="Slide16"/>
+        <img src="/SISLRA/Slides/Untitled-8.jpg" alt="Slide8"/>
+        <img src="/SISLRA/Slides/Untitled-2.jpg" alt="Slide2"/>
         <img src="/SISLRA/Slides/Untitled-5.jpg" alt="Slide5"/>
         <img src="/SISLRA/Slides/Untitled-6.jpg" alt="Slide6"/>
         <img src="/SISLRA/Slides/Untitled-7.jpg" alt="Slide7"/>
-        <img src="/SISLRA/Slides/Untitled-8.jpg" alt="Slide8"/>
         <img src="/SISLRA/Slides/Untitled-9.jpg" alt="Slide9"/>
         <img src="/SISLRA/Slides/Untitled-10.jpg" alt="Slide10"/>
         <img src="/SISLRA/Slides/Untitled-11.jpg" alt="Slide11"/>
         <img src="/SISLRA/Slides/Untitled-12.jpg" alt="Slide12"/>
         <img src="/SISLRA/Slides/Untitled-13.jpg" alt="Slide13"/>
         <img src="/SISLRA/Slides/Untitled-14.jpg" alt="Slide14"/>
-        <img src="/SISLRA/Slides/Untitled-15.jpg" alt="Slide15"/>
-        <img src="/SISLRA/Slides/Untitled-16.jpg" alt="Slide16"/>
         <img src="/SISLRA/Slides/Untitled-17.jpg" alt="Slide17"/>
         <img src="/SISLRA/Slides/Untitled-18.jpg" alt="Slide18"/>
       </div>
@@ -107,10 +110,10 @@
         <p>Memberships can be purchased at meetings, on race day, or by contacting the Membership Director -
           Bill Jamieson at 250-888-0053 or though email at <a href="mailto:mrpontiac55@gmail.com">mrpontiac55@gmail.com</a></p>
         
-        <h1 id="DriverInformationSheet">Driver Information Sheet</h1>
-        <p>Drivers, we ask that you please to print and complete the Driver Information Sheet so that the tower computers 
+        <h1 id="DriverInformationSheet">Driver Information Form</h1>
+        <p>Drivers, we ask that you please to print and complete the Driver Information Form so that the tower computers 
            can be up to date. Once completed bring it to race day or at a club meeting.</p>
-        <a class="DriverInfoPDF" href="/SISLRA/RacersInfo/DriverInformationSlip.pdf" target="_blank" class="btn btn-link" role="button"><span class="filetypes filetypes-pdf x2"></span><br> Driver Information Sheet/New Racers Sheet</a>
+        <a class="DriverInfoPDF" href="/SISLRA/RacersInfo/DriverInformationForm.pdf" target="_blank" class="btn btn-link" role="button"><i class="fa fa-file-pdf-o fa-3x" aria-hidden="true"></i><br> Driver Information Form/New Racers Form</a>
 
         <br>
         <br>
