--- a/src/inc/footerSocial.html
+++ b/src/inc/footerSocial.html
@@ -1,15 +1,15 @@
 <div id="footerSocial">
   <div class="footer-row">
     <div class="footer-section">
-      <a href="/"><img id="SISLRALogo-Footer" src="/SISLRA/WebBanner.png" alt="SISLRA" /></a>
+      <a href="/"><img id="SISLRALogo-Footer" class="animated flipInY" src="/SISLRA/WebBanner.png" alt="SISLRA" /></a>
     </div>
     <div class="footer-section">
       <div id="SocialMediaDiv-Footer">
-        <a href="https://www.facebook.com/groups/327092727329942/" target="_blank"><i class="fa fa-facebook fa-3x" aria-hidden="true"></i></a>
-        <a href="https://twitter.com/DragRaceVic" target="_blank"><i class="fa fa-twitter fa-3x" aria-hidden="true"></i></a>
-        <a href="https://www.instagram.com/dragracevictoria/?hl=en" target="_blank"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
-        <a href="https://www.youtube.com/user/nostopinLucR" target="_blank"><i class="fa fa-youtube-play fa-3x" aria-hidden="true"></i></a>
-        <p><a href="/">Home </a><span class="defaultCursor">| </span><a href="/Points.html">Points </a><span class="defaultCursor">| </span><a href="/Sponsors.html">Sponsors</a></p>
+        <a href="https://www.facebook.com/groups/327092727329942/" target="_blank"><i class="animated bounce fa fa-facebook fa-3x" aria-hidden="true"></i></a>
+        <a href="https://twitter.com/DragRaceVic" target="_blank"><i class="animated bounce fa fa-twitter fa-3x" aria-hidden="true"></i></a>
+        <a href="https://www.instagram.com/dragracevictoria/?hl=en" target="_blank"><i class="animated bounce fa fa-instagram fa-3x" aria-hidden="true"></i></a>
+        <a href="https://www.youtube.com/user/nostopinLucR" target="_blank"><i class="animated bounce fa fa-youtube-play fa-3x" aria-hidden="true"></i></a>
+        <p><a href="/">Home </a><span class="defaultCursor">| </span><a href="/Events">Events </a><span class="defaultCursor">| </span><a href="/Sponsors">Sponsors</a></p>
         <p><a href="/ContactUs">Contact Us </a><span class="defaultCursor">| </span><a href="/AboutUs">About Us</a></p>
       </div>
     </div>
