--- a/src/inc/header.html
+++ b/src/inc/header.html
@@ -5,7 +5,7 @@
   </div>
 </div>
 
-<a href="/"><img class="animated flipInX Webbanner" src="/SISLRA/WebBanner.png" alt="SISLRA" /></a>
+<a href="/"><img class="animated flipIn Webbanner" src="/SISLRA/WebBanner.png" alt="SISLRA" /></a>
 
 <div class="animated fadeIn CountDownTable">
   <div class="CountDownTable-row">
