--- a/src/inc/navBar.html
+++ b/src/inc/navBar.html
@@ -15,7 +15,7 @@
           <ul class="dropdown-menu">
             <li><a href="/RacerInfo">Fees</a></li>
             <li><a href="/RacerInfo#Memberships">Memberships</a></li>
-            <li><a href="/RacerInfo#DriverInformationSheet">Driver Information Sheet</a></li>
+            <li><a href="/RacerInfo#DriverInformationSheet">Driver Information Form</a></li>
             <li><a href="/RacerInfo#RaceClassesAndTimes">Classes & Times</a></li>
             <li><a href="/RacerInfo#BracketRacingBasics">Racing Basics</a></li>
             <li><a href="/RacerInfo#OutSideTrackLineUp">Track Line Up</a></li>
@@ -66,10 +66,10 @@
             <li><a href="#" data-toggle="modal" data-target="#winCalculatorModal">Win Calculator</a></li>
           </ul>
         </li>
-        <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"><span class="filetypes filetypes-pdf"></span> PDF<span class="caret"></span></a>
+        <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> PDF<span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="/SISLRA/RacersInfo/NewRacersInformation.pdf" target="_blank"><span class="filetypes filetypes-pdf"></span> Racers Information</a></li>
-            <li><a href="/SISLRA/RacersInfo/DriverInformationSlip.pdf" target="_blank"><span class="filetypes filetypes-pdf"></span> Driver Information Slip</a></li>
+            <li><a href="/SISLRA/RacersInfo/NewRacersInformation.pdf" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Racers Information</a></li>
+            <li><a href="/SISLRA/RacersInfo/DriverInformationForm.pdf" target="_blank"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Driver Information Form</a></li>
           </ul>
         </li>
       </ul>
