--- a/src/Points.html
+++ b/src/Points.html
@@ -5,7 +5,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SISLRA/Points</title>
-    <link rel="icon" href="/SISLRA/Favicon/16ChristmasTree.ico">
+    <link rel="icon" href="/SISLRA/ChristmasTree.ico">
 
     <!-- CSS -->
     <link rel="stylesheet" href="/Bootstrap/css/bootstrap.css">
@@ -48,23 +48,23 @@
     <div class="header shade">
       <!-- Slide show from here https://css-tricks.com/snippets/jquery/simple-auto-playing-slideshow/ -->
       <div class="slideshow">
-        <img src="/SISLRA/Slides/Untitled-2.jpg" alt="Slide2"/>
-        <img src="/SISLRA/Slides/Untitled-3.jpg" alt="Slide3"/>
-        <img src="/SISLRA/Slides/Untitled-4.jpg" alt="Slide4"/>
-        <img src="/SISLRA/Slides/Untitled-5.jpg" alt="Slide5"/>
-        <img src="/SISLRA/Slides/Untitled-6.jpg" alt="Slide6"/>
-        <img src="/SISLRA/Slides/Untitled-7.jpg" alt="Slide7"/>
-        <img src="/SISLRA/Slides/Untitled-8.jpg" alt="Slide8"/>
-        <img src="/SISLRA/Slides/Untitled-9.jpg" alt="Slide9"/>
-        <img src="/SISLRA/Slides/Untitled-10.jpg" alt="Slide10"/>
-        <img src="/SISLRA/Slides/Untitled-11.jpg" alt="Slide11"/>
-        <img src="/SISLRA/Slides/Untitled-12.jpg" alt="Slide12"/>
-        <img src="/SISLRA/Slides/Untitled-13.jpg" alt="Slide13"/>
-        <img src="/SISLRA/Slides/Untitled-14.jpg" alt="Slide14"/>
-        <img src="/SISLRA/Slides/Untitled-15.jpg" alt="Slide15"/>
-        <img src="/SISLRA/Slides/Untitled-16.jpg" alt="Slide16"/>
-        <img src="/SISLRA/Slides/Untitled-17.jpg" alt="Slide17"/>
         <img src="/SISLRA/Slides/Untitled-18.jpg" alt="Slide18"/>
+        <img src="/SISLRA/Slides/Untitled-17.jpg" alt="Slide17"/>
+        <img src="/SISLRA/Slides/Untitled-16.jpg" alt="Slide16"/>
+        <img src="/SISLRA/Slides/Untitled-15.jpg" alt="Slide15"/>
+        <img src="/SISLRA/Slides/Untitled-14.jpg" alt="Slide14"/>
+        <img src="/SISLRA/Slides/Untitled-13.jpg" alt="Slide13"/>
+        <img src="/SISLRA/Slides/Untitled-12.jpg" alt="Slide12"/>
+        <img src="/SISLRA/Slides/Untitled-11.jpg" alt="Slide11"/>
+        <img src="/SISLRA/Slides/Untitled-10.jpg" alt="Slide10"/>
+        <img src="/SISLRA/Slides/Untitled-9.jpg" alt="Slide9"/>
+        <img src="/SISLRA/Slides/Untitled-8.jpg" alt="Slide8"/>
+        <img src="/SISLRA/Slides/Untitled-7.jpg" alt="Slide7"/>
+        <img src="/SISLRA/Slides/Untitled-6.jpg" alt="Slide6"/>
+        <img src="/SISLRA/Slides/Untitled-5.jpg" alt="Slide5"/>
+        <img src="/SISLRA/Slides/Untitled-4.jpg" alt="Slide4"/>
+        <img src="/SISLRA/Slides/Untitled-3.jpg" alt="Slide3"/>
+        <img src="/SISLRA/Slides/Untitled-2.jpg" alt="Slide2"/>
       </div>
       <script src="/JavaScript/headerSlideShow.js"></script>
       <div w3-include-html="/inc/header.html"></div>
