--- a/src/inc/footerSocial.html
+++ b/src/inc/footerSocial.html
@@ -9,8 +9,8 @@
         <a href="https://twitter.com/DragRaceVic" target="_blank"><i class="animated bounce fa fa-twitter fa-3x" aria-hidden="true"></i></a>
         <a href="https://www.instagram.com/dragracevictoria/?hl=en" target="_blank"><i class="animated bounce fa fa-instagram fa-3x" aria-hidden="true"></i></a>
         <a href="https://www.youtube.com/user/nostopinLucR" target="_blank"><i class="animated bounce fa fa-youtube-play fa-3x" aria-hidden="true"></i></a>
-        <p><a href="/">Home </a><span class="defaultCursor">| </span><a href="/Events">Events </a><span class="defaultCursor">| </span><a href="/Sponsors">Sponsors</a></p>
-        <p><a href="/ContactUs">Contact Us </a><span class="defaultCursor">| </span><a href="/AboutUs">About Us</a></p>
+        <p><a href="/">Home </a><span class="defaultCursor">| </span><a href="/Events.html">Events </a><span class="defaultCursor">| </span><a href="/Sponsors.html">Sponsors</a></p>
+        <p><a href="/ContactUs.html">Contact Us </a><span class="defaultCursor">| </span><a href="/AboutUs.html">About Us</a></p>
       </div>
     </div>
     <div class="footer-section">
