--- a/src/inc/header.html
+++ b/src/inc/header.html
@@ -5,12 +5,12 @@
   </div>
 </div>
 
-<a href="/"><img class="animated flipIn Webbanner" src="/SISLRA/WebBanner.png" alt="SISLRA" /></a>
+<a href="/"><img class="animated flipInX Webbanner" src="/SISLRA/WebBanner.png" alt="SISLRA" /></a>
 
 <div class="animated fadeIn CountDownTable">
   <div class="CountDownTable-row">
     <div class="CountDownTable-section">
-      <h3><a href="/Events#RaceSchedule">Next SISLRA Race</a></h3>
+      <h3><a href="/Events.html">Next SISLRA Race</a></h3>
       <div id="SISLRARace">&nbsp;</div>
     </div>
     <div class="CountDownTable-section">
