--- a/src/inc/navBar.html
+++ b/src/inc/navBar.html
@@ -13,51 +13,51 @@
         <li id="indexActiveNavBar"><a href="/"><span class="glyphicon glyphicon-home"></span></a></li>
         <li id="racerInfoActiveNavBar" class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Racer Info <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="/RacerInfo">Fees</a></li>
-            <li><a href="/RacerInfo#Memberships">Memberships</a></li>
-            <li><a href="/RacerInfo#DriverInformationSheet">Driver Information Form</a></li>
-            <li><a href="/RacerInfo#RaceClassesAndTimes">Classes & Times</a></li>
-            <li><a href="/RacerInfo#BracketRacingBasics">Racing Basics</a></li>
-            <li><a href="/RacerInfo#OutSideTrackLineUp">Track Line Up</a></li>
-            <li><a href="/RacerInfo#Tech.Inspection">Tech. Inspection</a></li> 
-            <li><a href="/RacerInfo#TheTrack">The Track</a></li> 
-            <li><a href="/RacerInfo#Qualifying&Eliminations">Qualifying & Eliminations</a></li> 
-            <li><a href="/RacerInfo#Disqualifications">Disqualifications</a></li> 
-            <li><a href="/RacerInfo#Tree">Tree</a></li>
+            <li><a href="/RacerInfo.html">Fees</a></li>
+            <li><a href="/RacerInfo.html#Memberships">Memberships</a></li>
+            <li><a href="/RacerInfo.html#DriverInformationSheet">Driver Information Form</a></li>
+            <li><a href="/RacerInfo.html#RaceClassesAndTimes">Classes & Times</a></li>
+            <li><a href="/RacerInfo.html#BracketRacingBasics">Racing Basics</a></li>
+            <li><a href="/RacerInfo.html#OutSideTrackLineUp">Track Line Up</a></li>
+            <li><a href="/RacerInfo.html#Tech.Inspection">Tech. Inspection</a></li> 
+            <li><a href="/RacerInfo.html#TheTrack">The Track</a></li> 
+            <li><a href="/RacerInfo.html#Qualifying&Eliminations">Qualifying & Eliminations</a></li> 
+            <li><a href="/RacerInfo.html#Disqualifications">Disqualifications</a></li> 
+            <li><a href="/RacerInfo.html#Tree">Tree</a></li>
           </ul>
         </li>
-        <li id="pointsActiveNavBar"><a href="/Points">Points</a></li>
+        <li id="pointsActiveNavBar"><a href="/Points.html">Points</a></li>
         <li id="eventsActiveNavBar" class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Events <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="/Events">Race Schedule</a></li>
-            <li><a href="/Events#Posters">Posters</a></li>
+            <li><a href="/Events.html">Race Schedule</a></li>
+            <li><a href="/Events.html#Posters">Posters</a></li>
           </ul>
         </li>
         <li id="sponsorsActiveNavBar" class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Sponsors <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="/Sponsors">B&D Forklift</a></li>
-            <li><a href="/Sponsors">Searles</a></li>
-            <li><a href="/Sponsors#GraphicFX">GraphicFX</a></li>
-            <li><a href="/Sponsors#Dentex">Dentex</a></li>
-            <li><a href="/Sponsors#Lordco">Lordco</a></li>
-            <li><a href="/Sponsors#Used.ca">Used.ca</a></li>
-            <li><a href="/Sponsors#WestBayMechanical">West Bay Mechanical</a></li>
-            <li><a href="/Sponsors#IslandTorque">Island Torque</a></li>
-            <li><a href="/Sponsors#MaMillersPub">MaMillers Pub</a></li>
-            <li><a href="/Sponsors#HenrdrySwinton">Henrdry Swinton</a></li>
-            <li><a href="/Sponsors#SponsorshipInformation">Sponsorship Info.</a></li>
+            <li><a href="/Sponsors.html">B&D Forklift</a></li>
+            <li><a href="/Sponsors.html">Searles</a></li>
+            <li><a href="/Sponsors.html#GraphicFX">GraphicFX</a></li>
+            <li><a href="/Sponsors.html#Dentex">Dentex</a></li>
+            <li><a href="/Sponsors.html#Lordco">Lordco</a></li>
+            <li><a href="/Sponsors.html#Used.ca">Used.ca</a></li>
+            <li><a href="/Sponsors.html#WestBayMechanical">West Bay Mechanical</a></li>
+            <li><a href="/Sponsors.html#IslandTorque">Island Torque</a></li>
+            <li><a href="/Sponsors.html#MaMillersPub">MaMillers Pub</a></li>
+            <li><a href="/Sponsors.html#HenrdrySwinton">Henrdry Swinton</a></li>
+            <li><a href="/Sponsors.html#SponsorshipInformation">Sponsorship Info.</a></li>
           </ul>
         </li>
         <li id="contactUsActiveNavBar" class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Contact Us <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="/ContactUs">Contact Us</a></li>
-            <li><a href="/ContactUs#links">Other Tracks and Clubs</a></li>
+            <li><a href="/ContactUs.html">Contact Us</a></li>
+            <li><a href="/ContactUs.html#links">Other Tracks and Clubs</a></li>
           </ul>
         </li>
         <li id="aboutUsActiveNavBar" class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">About Us <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="/AboutUs">About Us</a></li>
-            <li><a href="/AboutUs#LOCATEDAT">Location</a></li>
+            <li><a href="/AboutUs.html">About Us</a></li>
+            <li><a href="/AboutUs.html#LOCATEDAT">Location</a></li>
           </ul>
         </li>
         <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Calculators <span class="caret"></span></a>
