--- a/src/inc/winCalculatorModal.html
+++ b/src/inc/winCalculatorModal.html
@@ -14,7 +14,6 @@
                 <p style="color: #FC0;">Car #1</p>
               </div>
               <div class="winCalculatorTable-section">
-
               </div>
               <div class="winCalculatorTable-section">
                 <p style="color: #FC0;">Car #2</p>
@@ -44,7 +43,7 @@
             </div>
             <div class="winCalculatorTable-row">
               <div class="winCalculatorTable-section">
-                <input id="ET1" type="number" placeholder="Elapsed Time">
+                <input id="ETa" type="number" placeholder="Elapsed Time">
               </div>
               <div class="winCalculatorTable-section">
                 <p>ET</p>
@@ -69,7 +68,7 @@
             </div>
             <div class="winCalculatorTable-row">
               <div class="winCalculatorTable-section">
-                <input class="formOutputs" color: #FC0;" id="diffa" type="number" disabled>
+                <input style="color: #FC0;" class="formOutputs" id="diffa" type="number" disabled>
               </div>
               <div class="winCalculatorTable-section">
                 <p>Difference Between Dial-ins</p>
@@ -94,7 +93,6 @@
                 <input style="color: #0F0;" class="formOutputs" id="wina" type="text" disabled>
               </div>
               <div class="winCalculatorTable-section">
-              
               </div>
               <div class="winCalculatorTable-section">
                 <input style="color: #0F0;" class="formOutputs" id="winb" type="text" disabled>
