Added expire.js to automatically update the index page for timed things. Added marquee.js to automatically update the marquee for the races that are over. Fixed ET converter (Now using the right conversion factors). Deleted bootStrapNavBarAnimate.js (no longer needed)

--- a/src/Points.html
+++ b/src/Points.html
@@ -67,7 +67,34 @@
         <img src="/SISLRA/Slides/Untitled-2.jpg" alt="Slide2"/>
       </div>
       <script src="/JavaScript/headerSlideShow.js"></script>
-      <div w3-include-html="/inc/header.html"></div>
+      
+      <div class="animated fadeIn marquee">
+        <div>
+          <span class="marqueeInfo"></span>
+          <span class="marqueeInfo2"></span>
+        </div>
+      </div>
+      <script src="/JavaScript/marquee.js"></script>
+
+      <a href="/"><img class="animated flipInX Webbanner" src="/SISLRA/WebBanner.png" alt="SISLRA" /></a>
+
+      <div class="animated fadeIn CountDownTable">
+        <div class="CountDownTable-row">
+          <div class="CountDownTable-section">
+            <h3><a href="/Events.html">Next SISLRA Race</a></h3>
+            <div id="SISLRARace">&nbsp;</div>
+          </div>
+          <div class="CountDownTable-section">
+            <h3><a href="http://www.northislandtimingassociation.com/" target="_blank">Next Rumble on the Runway</a></h3>
+            <div id="PortMcNeill">&nbsp;</div>
+          </div>
+          <div class="CountDownTable-section">
+            <h3><a href="http://www.albernidragracing.com/" target="_blank">Thunder in The Valley</a></h3>
+            <div id="PortAlberni">&nbsp;</div>
+          </div>
+        </div>
+      </div>
+      
     </div>
 
     <div class="row">
