--- a/src/inc/navBar.html
+++ b/src/inc/navBar.html
@@ -64,6 +64,8 @@
           <ul class="dropdown-menu">
             <li><a href="#" data-toggle="modal" data-target="#ETConverterModal">ET Converter</a></li>
             <li><a href="#" data-toggle="modal" data-target="#winCalculatorModal">Win Calculator</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="http://www.wallaceracing.com/Calculators.htm" target="_blank">Wallace Racing Calculators</a></li>
           </ul>
         </li>
         <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> PDF<span class="caret"></span></a>
