Updated Points, 2017 Points Winners, Count Down for Thunder in the Valley and Rumble on the Runway, Calculators. Changed color for bike class.

--- a/src/inc/ETConverterModal.html
+++ b/src/inc/ETConverterModal.html
@@ -3,11 +3,11 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Track Time Converter <br><span style="color: #F00;">Beta*</span></h4>
+        <h4 class="modal-title">Track Time Converter</h4>
       </div>
       <div class="modal-body">
         <div>
-          <p style="text-align: center;">This calculator gives you an idea of what you might run.</p>
+          <p style="text-align: center;">This converter gives you an idea of what you might run at the given lengths of track.</p>
           <div>
             <label>1/4 Mile</label>
             <input id="inputQuarterMile" type="number" placeholder="1/4 Mile" oninput="speedConverter(this.id,this.value)" onchange="speedConverter(this.id,this.value)">
