--- a/src/inc/winCalculatorModal.html
+++ b/src/inc/winCalculatorModal.html
@@ -3,10 +3,9 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h2 class="modal-title">Win Calculator <br><span style="color: #F00;">Beta*</span></h2>
+        <h2 class="modal-title">Win Calculator <br><span style="color: #F00;">Beta*</span><br><span style="font-size: 15px; color: #FFF;">*This calculator currently does not account for brake-outs.</h2>
       </div>
       <div class="modal-body">
-      
         <form id="winCalculator">
           <div class="winCalculatorTable">
             <div class="winCalculatorTable-row">
