Updated Points in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -213,14 +213,14 @@
           
             <div class="indexPointsList">
               <h2 class="pro">Pro Class</h2>
-              <p>1. #B408 Blake Miller - 4319 Points.</p>
-              <p>2. #6011 Bill Nesbitt - 3513 Points.</p>
-              <p>3. #263 Bill Jamieson - 3414 Points.</p>
+              <p>1. #B408 Blake Miller - 4619 Points.</p>
+              <p>2. #6011 Bill Nesbitt - 4317 Points.</p>
+              <p>3. #420 Matt Armstrong - 3914 Points.</p>
 
               <h2 class="street">Street Class</h2>
-              <p>1. #26 Rob Baxter - 4219 Points.</p>
-              <p>2. #108 Lisa Miller - 3514 Points.</p>
-              <p>3. #78 Stuart Mann - 3413 Points.</p>
+              <p>1. #26 Rob Baxter - 5124 Points.</p>
+              <p>2. #108 Lisa Miller - 4117 Points.</p>
+              <p>2. #78 Stuart Mann - 4117 Points.</p>
               
               <h2 class="bike">Bike Class</h2>
               <p>1. #75 Elias Dick - 2006 Points.</p>
