--- a/src/RacerInfo.html
+++ b/src/RacerInfo.html
@@ -113,8 +113,9 @@
           <p><strong>Pro Class</strong> - $35.00 for vehicle and member*</p>
           <p><strong>Pit Passes</strong> - $10.00 per member*</p>
           <br>
-          <p>Non-members add $5.00 Interested in becoming a <a href="/RacerInfo#Memberships">member?</a> Detials below.</p>
+          <p>Non-members add $5.00.</p>
           <p>Please note that you must be a paid member to participate in the season's points standings competition.</p>
+          <p>Interested in becoming a <a href="/RacerInfo#Memberships">member?</a> Detials below.</p>
           <br>     
           <p><strong>Student Class</strong> - $20.00 for vehicle and Driver.
           <p><strong>Student Pit Pass</strong> - $10.00 per student.
