Add silent auction stuff.

--- a/src/ContactUs.html
+++ b/src/ContactUs.html
@@ -120,19 +120,19 @@
               <td><a href="mailto:6t4tbolt@gmail.com">6t4tbolt@gmail.com</a></td>
             </tr>
             <tr>
-              <td>Co-Vice Precidents</td>
+              <td>Vice Precident</td>
               <td>Tracy Barnes</td>
               <td>#208</td>
               <td>250-812-6201</td>
               <td><a href="mailto:island.oasis@shaw.ca">island.oasis@shaw.ca</a></td>
             </tr>
-            <tr>
+<!--             <tr>
               <td>&nbsp;</td>
               <td>Rob Baxter</td>
               <td>#26</td>
               <td>&nbsp;</td>
               <td><a href="mailto:robbiebaxt@gmail.com">robbiebaxt@gmail.com</a></td>
-            </tr>
+            </tr> -->
             <tr>
               <td>Secretary</td>
               <td>Lisa Miller</td>
@@ -148,9 +148,16 @@
               <td><a href="mailto:mrpontiac55@gmail.com">mrpontiac55@gmail.com</a></td>
             </tr>
             <tr>
-              <td>Race Director</td>
+              <td>Co-Race Directors</td>
               <td>Kole Barnes</td>
               <td>#18</td>
+              <td>250-812-6201</td>
+              <td><a href="mailto:island.oasis@shaw.ca">island.oasis@shaw.ca</a></td>
+            </tr>
+            <tr>
+              <td>&nbsp;</td>
+              <td>Connor Barnes</td>
+              <td>#8</td>
               <td>250-812-6201</td>
               <td><a href="mailto:island.oasis@shaw.ca">island.oasis@shaw.ca</a></td>
             </tr>
@@ -336,8 +343,15 @@
               <td>250-478-6606</td>
               <td><a href="mailto:cngarth@telus.net">cngarth@telus.net</a></td>
             </tr>
+            <tr class="VolunteerNeeded">
+              <td>50/50</td>
+              <td>Volunteer Needed</td>
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
+            </tr>
             <tr>
-              <td>50/50 & Club Posters</td>
+              <td>Club Posters</td>
               <td>Joanne VanHumbeck</td>
               <td>(#7455)</td>
               <td>250-391-9020</td>
