--- a/src/SISLRA/RacePoints/BikePoints.htm
+++ b/src/SISLRA/RacePoints/BikePoints.htm
@@ -7,11 +7,11 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
 <link rel=File-List href="BikePoints_files/filelist.xml">
-<style id="Points_2017membersonly_11345_Styles">
+<style id="Points_2017_FINAL (1)_29760_Styles">
 <!--table
 	{mso-displayed-decimal-separator:"\.";
 	mso-displayed-thousand-separator:"\,";}
-.xl1511345
+.xl1529760
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -29,7 +29,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:nowrap;}
-.xl6311345
+.xl6329760
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -47,7 +47,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:nowrap;}
-.xl6411345
+.xl6429760
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -65,7 +65,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:nowrap;}
-.xl6511345
+.xl6529760
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -84,7 +84,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	background:#FFE699;
 	mso-pattern:white none;
 	white-space:nowrap;}
-.xl6611345
+.xl6629760
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -103,7 +103,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	background:#FFE699;
 	mso-pattern:white none;
 	white-space:nowrap;}
-.xl6711345
+.xl6729760
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -122,7 +122,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	background:white;
 	mso-pattern:white none;
 	white-space:nowrap;}
-.xl6811345
+.xl6829760
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -141,7 +141,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	background:white;
 	mso-pattern:white none;
 	white-space:nowrap;}
-.xl6911345
+.xl6929760
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -160,7 +160,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	background:white;
 	mso-pattern:white none;
 	white-space:nowrap;}
-.xl7011345
+.xl7029760
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -179,7 +179,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	background:white;
 	mso-pattern:white none;
 	white-space:nowrap;}
-.xl7111345
+.xl7129760
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -198,7 +198,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	background:white;
 	mso-pattern:white none;
 	white-space:nowrap;}
-.xl7211345
+.xl7229760
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -231,101 +231,91 @@ tags will be replaced.-->
 <!--START OF OUTPUT FROM EXCEL PUBLISH AS WEB PAGE WIZARD -->
 <!----------------------------->
 
-<div id="Points_2017membersonly_11345" align=center x:publishsource="Excel">
+<div id="Points_2017_FINAL (1)_29760" align=center x:publishsource="Excel">
 
-<table border=0 cellpadding=0 cellspacing=0 width=1069 style='border-collapse:
- collapse;table-layout:fixed;width:798pt'>
- <col class=xl6411345 width=70 span=2 style='width:52pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=935 style='border-collapse:
+ collapse;table-layout:fixed;width:698pt'>
+ <col class=xl6429760 width=70 span=2 style='width:52pt'>
  <col width=104 style='mso-width-source:userset;mso-width-alt:3503;width:78pt'>
- <col width=67 span=11 style='width:50pt'>
+ <col width=67 span=9 style='width:50pt'>
  <col width=25 style='mso-width-source:userset;mso-width-alt:835;width:19pt'>
  <col width=63 style='mso-width-source:userset;mso-width-alt:2115;width:47pt'>
  <tr height=20 style='height:14.7pt'>
-  <td colspan=16 rowspan=2 height=40 class=xl6511345 width=1069
-  style='height:29.4pt;width:798pt'>SISLRA Bike Points
+  <td colspan=14 rowspan=2 height=40 class=xl6529760 width=935
+  style='height:29.4pt;width:698pt'>SISLRA Bike Points
   2017</td>
  </tr>
  <tr height=20 style='height:14.7pt'>
  </tr>
- <tr class=xl6311345 height=20 style='height:14.7pt'>
-  <td height=20 class=xl6711345 style='height:14.7pt;border-top:none'>Place</td>
-  <td class=xl6711345 style='border-top:none;border-left:none'>Car #</td>
-  <td class=xl6811345 style='border-top:none;border-left:none'>Driver's Name</td>
-  <td class=xl6811345 style='border-top:none;border-left:none'>Member</td>
-  <td class=xl6811345 style='border-top:none;border-left:none'>Total</td>
-  <td class=xl6911345 style='border-top:none;border-left:none'>Apr 23</td>
-  <td class=xl6811345 style='border-top:none;border-left:none'>Apr 30</td>
-  <td class=xl6811345 style='border-top:none;border-left:none'>May 7</td>
-  <td class=xl6811345 style='border-top:none;border-left:none'>May 14</td>
-  <td class=xl6811345 style='border-top:none;border-left:none'>Jun 11</td>
-  <td class=xl6811345 style='border-top:none;border-left:none'>Jun 17</td>
-  <td class=xl6811345 style='border-top:none;border-left:none'>Jun 18</td>
-  <td class=xl6811345 style='border-top:none;border-left:none'>Sept 10</td>
-  <td class=xl6911345 style='border-top:none;border-left:none'>Sep 17</td>
-  <td class=xl6911345 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl6811345 style='border-top:none;border-left:none'>BONUS</td>
+ <tr class=xl6329760 height=20 style='height:14.7pt'>
+  <td height=20 class=xl6729760 style='height:14.7pt;border-top:none'>Place</td>
+  <td class=xl6729760 style='border-top:none;border-left:none'>Car #</td>
+  <td class=xl6829760 style='border-top:none;border-left:none'>Driver's Name</td>
+  <td class=xl6829760 style='border-top:none;border-left:none'>Member</td>
+  <td class=xl6829760 style='border-top:none;border-left:none'>Total</td>
+  <td class=xl6929760 style='border-top:none;border-left:none'>Apr 23</td>
+  <td class=xl6829760 style='border-top:none;border-left:none'>Apr 30</td>
+  <td class=xl6829760 style='border-top:none;border-left:none'>May 7</td>
+  <td class=xl6829760 style='border-top:none;border-left:none'>May 14</td>
+  <td class=xl6829760 style='border-top:none;border-left:none'>Jun 11</td>
+  <td class=xl6829760 style='border-top:none;border-left:none'>Jun 18</td>
+  <td class=xl6929760 style='border-top:none;border-left:none'>Sep 17</td>
+  <td class=xl6929760 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl6829760 style='border-top:none;border-left:none'>BONUS</td>
  </tr>
  <tr height=23 style='mso-height-source:userset;height:17.25pt'>
-  <td height=23 class=xl7011345 style='height:17.25pt;border-top:none'>1</td>
-  <td class=xl7011345 style='border-top:none;border-left:none'>75</td>
-  <td class=xl7111345 style='border-top:none;border-left:none'>Elias Dick</td>
-  <td class=xl7111345 style='border-top:none;border-left:none'>YES</td>
-  <td class=xl7111345 align=right style='border-top:none;border-left:none'>2006</td>
-  <td class=xl7211345 style='border-top:none;border-left:none'>RO</td>
-  <td class=xl7111345 align=right style='border-top:none;border-left:none'>602</td>
-  <td class=xl7111345 align=right style='border-top:none;border-left:none'>602</td>
-  <td class=xl7111345 align=right style='border-top:none;border-left:none'>300</td>
-  <td class=xl7111345 align=right style='border-top:none;border-left:none'>502</td>
-  <td class=xl7111345 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl7211345 style='border-top:none;border-left:none'>RO</td>
-  <td class=xl7111345 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl7111345 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl7111345 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl7111345 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td height=23 class=xl7029760 style='height:17.25pt;border-top:none'>1</td>
+  <td class=xl7029760 style='border-top:none;border-left:none'>75</td>
+  <td class=xl7129760 style='border-top:none;border-left:none'>Elias Dick</td>
+  <td class=xl7129760 style='border-top:none;border-left:none'>YES</td>
+  <td class=xl7129760 align=right style='border-top:none;border-left:none'>2006</td>
+  <td class=xl7229760 style='border-top:none;border-left:none'>RO</td>
+  <td class=xl7129760 align=right style='border-top:none;border-left:none'>602</td>
+  <td class=xl7129760 align=right style='border-top:none;border-left:none'>602</td>
+  <td class=xl7129760 align=right style='border-top:none;border-left:none'>300</td>
+  <td class=xl7129760 align=right style='border-top:none;border-left:none'>502</td>
+  <td class=xl7229760 style='border-top:none;border-left:none'>RO</td>
+  <td class=xl7229760 style='border-top:none;border-left:none'>RO</td>
+  <td class=xl7129760 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl7129760 style='border-top:none;border-left:none'>&nbsp;</td>
  </tr>
  <tr height=20 style='height:14.7pt'>
-  <td height=20 class=xl7011345 style='height:14.7pt;border-top:none'>2</td>
-  <td class=xl7011345 style='border-top:none;border-left:none'>1000</td>
-  <td class=xl7111345 style='border-top:none;border-left:none'>Jim Hannah</td>
-  <td class=xl7111345 style='border-top:none;border-left:none'>YES</td>
-  <td class=xl7111345 align=right style='border-top:none;border-left:none'>1502</td>
-  <td class=xl7211345 style='border-top:none;border-left:none'>RO</td>
-  <td class=xl7111345 align=right style='border-top:none;border-left:none'>300</td>
-  <td class=xl7111345 align=right style='border-top:none;border-left:none'>300</td>
-  <td class=xl7111345 align=right style='border-top:none;border-left:none'>602</td>
-  <td class=xl7111345 align=right style='border-top:none;border-left:none'>300</td>
-  <td class=xl7111345 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl7211345 style='border-top:none;border-left:none'>RO</td>
-  <td class=xl7111345 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl7111345 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl7111345 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl7111345 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td height=20 class=xl7029760 style='height:14.7pt;border-top:none'>2</td>
+  <td class=xl7029760 style='border-top:none;border-left:none'>1000</td>
+  <td class=xl7129760 style='border-top:none;border-left:none'>Jim Hannah</td>
+  <td class=xl7129760 style='border-top:none;border-left:none'>YES</td>
+  <td class=xl7129760 align=right style='border-top:none;border-left:none'>1577</td>
+  <td class=xl7229760 style='border-top:none;border-left:none'>RO</td>
+  <td class=xl7129760 align=right style='border-top:none;border-left:none'>300</td>
+  <td class=xl7129760 align=right style='border-top:none;border-left:none'>300</td>
+  <td class=xl7129760 align=right style='border-top:none;border-left:none'>602</td>
+  <td class=xl7129760 align=right style='border-top:none;border-left:none'>300</td>
+  <td class=xl7229760 style='border-top:none;border-left:none'>RO</td>
+  <td class=xl7229760 style='border-top:none;border-left:none'>RO</td>
+  <td class=xl7129760 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl7129760 align=right style='border-top:none;border-left:none'>75</td>
  </tr>
  <tr height=20 style='height:14.7pt'>
-  <td height=20 class=xl7011345 style='height:14.7pt;border-top:none'>3</td>
-  <td class=xl7011345 style='border-top:none;border-left:none'>1198</td>
-  <td class=xl7111345 style='border-top:none;border-left:none'>Robbie Kent</td>
-  <td class=xl7111345 style='border-top:none;border-left:none'>YES</td>
-  <td class=xl7111345 align=right style='border-top:none;border-left:none'>300</td>
-  <td class=xl7211345 style='border-top:none;border-left:none'>RO</td>
-  <td class=xl7111345 align=right style='border-top:none;border-left:none'>300</td>
-  <td class=xl7111345 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl7111345 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl7111345 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl7111345 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl7211345 style='border-top:none;border-left:none'>RO</td>
-  <td class=xl7111345 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl7111345 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl7111345 style='border-top:none;border-left:none'>&nbsp;</td>
-  <td class=xl7111345 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td height=20 class=xl7029760 style='height:14.7pt;border-top:none'>3</td>
+  <td class=xl7029760 style='border-top:none;border-left:none'>1198</td>
+  <td class=xl7129760 style='border-top:none;border-left:none'>Robbie Kent</td>
+  <td class=xl7129760 style='border-top:none;border-left:none'>YES</td>
+  <td class=xl7129760 align=right style='border-top:none;border-left:none'>300</td>
+  <td class=xl7229760 style='border-top:none;border-left:none'>RO</td>
+  <td class=xl7129760 align=right style='border-top:none;border-left:none'>300</td>
+  <td class=xl7129760 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl7129760 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl7129760 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl7229760 style='border-top:none;border-left:none'>RO</td>
+  <td class=xl7229760 style='border-top:none;border-left:none'>RO</td>
+  <td class=xl7129760 style='border-top:none;border-left:none'>&nbsp;</td>
+  <td class=xl7129760 style='border-top:none;border-left:none'>&nbsp;</td>
  </tr>
  <![if supportMisalignedColumns]>
  <tr height=0 style='display:none'>
   <td width=70 style='width:52pt'></td>
   <td width=70 style='width:52pt'></td>
   <td width=104 style='width:78pt'></td>
-  <td width=67 style='width:50pt'></td>
-  <td width=67 style='width:50pt'></td>
   <td width=67 style='width:50pt'></td>
   <td width=67 style='width:50pt'></td>
   <td width=67 style='width:50pt'></td>
