--- a/src/Events.html
+++ b/src/Events.html
@@ -115,19 +115,17 @@
 
           <div class="animated zoomInDown">
             <ul>
-              <p>2018 Race Schedule Coming Soon</p>
-              <!-- <li style="margin-left: 10px; margin-top: 10px;" id="1stRace">Apr 23 - Rained Out</li>
-              <li style="margin-left: 37px;" id="2ndRace">30 - Points - Cars, Bikes & Students</li>
-              <li style="margin-left: 5px;" id="3rdRace">May &nbsp;&nbsp;7 - Points - Cars, Bikes & Students</li>
-              <li style="margin-left: 37px;" id="4thRace">14 - Points - Cars, Bikes & Students</li>
-              <li style="margin-left: 1px;" id="5thRace">June 11 - Points - Cars, Bikes & Students</li>
-              <li style="margin-left: 36px;" id="6thRace" class="new">17 - Rain Date - Saturday Race</li> 
-              <li style="margin-left: 36px;" id="7thRace">18 - Points - Cars & Bikes</li> 
-              <li style="margin-left: 5px;" id="8thRace">July &nbsp;&nbsp;9 - Points - Cars & Bikes</li>
-              <li style="margin-left: 36px;" id="9thRace">30 - SHOOTOUT</li>
-              <li style="margin-left: 5px;" id="10thRace">Aug 20 - Points - Cars & Bikes</li>
-              <li style="margin-left: 1px;" id="11thRace">Sept 10 - Points - Cars & Bikes</li>
-              <li style="margin-left: 35px; margin-bottom: 5px;" id="12thRace">17 - Championship Race</li>
+              <li style="margin-left: 10px; margin-top: 10px;" id="1stRace">Apr 22 - Points - Cars, Bikes & Students</li>
+              <li style="margin-left: 37px;" id="2ndRace">29 - Points - Cars, Bikes & Students</li>
+              <li style="margin-left: 5px;" id="3rdRace">May &nbsp;&nbsp;6 - Points - Cars, Bikes & Students</li>
+              <li style="margin-left: 37px;" id="4thRace">13 - Points - Cars, Bikes & Students</li>
+              <li style="margin-left: 0px;" id="5thRace">June &nbsp;&nbsp;3 - Points - Cars, Bikes & Students</li>
+              <li style="margin-left: 36px;" id="6thRace">10 - Points - Cars, Bikes & Students</li> 
+              <li style="margin-left: 5px;" id="7thRace">July &nbsp;&nbsp;8 - Points - Cars & Bikes</li> 
+              <li style="margin-left: 36px;" id="8thRace">29 - SHOOTOUT</li>
+              <li style="margin-left: 5px;" id="9thRace">Aug 19 - Points - Cars & Bikes</li>
+              <li style="margin-left: 1px;" id="10thRace">Sept &nbsp;&nbsp;9 - Points - Cars & Bikes</li>
+              <li style="margin-left: 35px; margin-bottom: 5px;" id="11thRace">23 - Championship Race</li>
               <!-- Classes .current .over .cancelled .new -->
             </ul>
           </div>
