--- a/src/index.html
+++ b/src/index.html
@@ -218,18 +218,18 @@
           
             <div class="indexPointsList">
               <h2 class="pro">Pro Class</h2>
-              <p>1. #B408 Blake Miller - 4619 Points.</p>
-              <p>2. #6011 Bill Nesbitt - 4317 Points.</p>
-              <p>3. #420 Matt Armstrong - 3914 Points.</p>
+              <p>1. #B408 Blake Miller - 5019 Points.</p>
+              <p>2. #6011 Bill Nesbitt - 4717 Points.</p>
+              <p>3. #263 Bill Jamieson Jr. - 4113 Points.</p>
 
               <h2 class="street">Street Class</h2>
-              <p>1. #26 Rob Baxter - 5124 Points.</p>
-              <p>2. #108 Lisa Miller - 4117 Points.</p>
-              <p>2. #78 Stuart Mann - 4117 Points.</p>
+              <p>1. #26 Rob Baxter - 5249 Points.</p>
+              <p>2. #108 Lisa Miller - 4517 Points.</p>
+              <p>3. #50 Clint Neargarth - 4213 Points.</p>
               
               <h2 class="bike">Bike Class</h2>
               <p>1. #75 Elias Dick - 2006 Points.</p>
-              <p>2. #1000 Jim Hannah - 1502 Points.</p>
+              <p>2. #1000 Jim Hannah - 1577 Points.</p>
               <p>3. #1198 Robbie Kent - 300 Points.</p>
             </div>
         </div>
